# filesystem_agent

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/core/: config.py  config.yml
app/data/agent_workspace/: family_budget.xlsx.txt  holiday_itinerary.txt  meeting_notes.txt  project_plan.md  recipe_book.md
app/data/agent_workspace/private/: family_budget.xlsx.txt  holiday_itinerary.txt  recipe_book.md
app/data/agent_workspace/work/: meeting_notes.txt
app/services/: agent.py  data.py
